--- a/eureka-microservice-local.properties
+++ b/eureka-microservice-local.properties
@@ -1,3 +1,11 @@
 user.property= User profile local
 server.port=6667
 
+#Define el nombre de host para la instancia del servidor Eureka.
+eureka.instance.hostname=localhost
+#Desactiva el registro automático de esta instancia del servidor Eureka en sí mismo.
+eureka.client.register-with-eureka=false
+#Desactiva la recuperación automática del registro de servicios de Eureka por parte de esta instancia del servidor Eureka
+eureka.client.fetch-registry=false
+#
+eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
