--- a/eureka-microservice-local.properties
+++ b/eureka-microservice-local.properties
@@ -2,7 +2,7 @@ user.property= User profile local
 server.port=6667
 
 #Define el nombre de host para la instancia del servidor Eureka.
-eureka.instance.hostname=localhost
+eureka.instance.hostname=127.0.0.1
 #Desactiva el registro automático de esta instancia del servidor Eureka en sí mismo.
 eureka.client.register-with-eureka=false
 #Desactiva la recuperación automática del registro de servicios de Eureka por parte de esta instancia del servidor Eureka
