--- a/user-microservice-local.properties
+++ b/user-microservice-local.properties
@@ -1,4 +1,15 @@
 user.property= User profile local
 server.port=8011
 
+
+#Buenos Aires, Argentina time
+spring.datasource.url=jdbc:mysql://localhost:3306/kanestt?useLegacyDatetimeCode=false&serverTimezone=America/Argentina/Buenos_Aires
+spring.datasource.username=root
+spring.datasource.password=1925
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+
 eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka/
